The manipulation macros for struct dirent are also used by the ufs/ffs code to manipulate the similar but not identical struct direct. For this reason they must remain type-polymorphic. Rev 1.25 broke that property, so put it back by using typeof. Fixes PR 45119.